--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
                                 class="fa-cloud fa-solid text-primary mt-1 me-2"></i>Clima App</a>
                     </li>
                     <li>
-                        <a routerLink="/bootstrap/badges" class="link-dark rounded"><i
+                        <a routerLink="/github" class="link-dark rounded"><i
                                 class="fas fa-user-friends text-primary mt-1 me-2"></i>Badges</a>
                     </li>
                     <li>
