--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
                                 class="fas fa-user-friends text-primary mt-1 me-2"></i>Badges</a>
                     </li>
                     <li>
-                        <a routerLink="/bootstrap/blockquotes" class="link-dark rounded"><i
+                        <a routerLink="/peliculas" class="link-dark rounded"><i
                                 class="fas fa-house-user text-primary mt-1 me-2"></i>Blockquotes</a>
                     </li>
                     <li>
