--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
                                 class="fas fa-house-user text-primary mt-1 me-2"></i>Blockquotes</a>
                     </li>
                     <li>
-                        <a routerLink="/bootstrap/cards" class="link-dark rounded"><i
+                        <a routerLink="/adivinanza" class="link-dark rounded"><i
                                 class="fab fa-asymmetrik text-primary mt-1 me-2"></i>Cards</a>
                     </li>
                     <li>
