--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -13,19 +13,19 @@
                     </li>
                     <li>
                         <a routerLink="/github" class="link-dark rounded"><i
-                                class="fas fa-user-friends text-primary mt-1 me-2"></i>Badges</a>
+                                class="fas fa-user-friends text-primary mt-1 me-2"></i>GitHub</a>
                     </li>
                     <li>
                         <a routerLink="/peliculas" class="link-dark rounded"><i
-                                class="fas fa-house-user text-primary mt-1 me-2"></i>Blockquotes</a>
+                                class="fas fa-house-user text-primary mt-1 me-2"></i>Peliculas</a>
                     </li>
                     <li>
                         <a routerLink="/adivinanza" class="link-dark rounded"><i
-                                class="fab fa-asymmetrik text-primary mt-1 me-2"></i>Cards</a>
+                                class="fab fa-asymmetrik text-primary mt-1 me-2"></i>Adivinanza</a>
                     </li>
                     <li>
-                        <a routerLink="/bootstrap/collapse" class="link-dark rounded"><i
-                                class="fas fa-balance-scale-right text-primary mt-1 me-2"></i>Collapse</a>
+                        <a routerLink="/validacion" class="link-dark rounded"><i
+                                class="fas fa-balance-scale-right text-primary mt-1 me-2"></i>Validacion</a>
                     </li>
                     <li>
                         <a routerLink="/bootstrap/dropdowns" class="link-dark rounded"><i
