OBJETO WINDOW ACTIVO

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -28,8 +28,8 @@
                                 class="fas fa-balance-scale-right text-primary mt-1 me-2"></i>Validacion</a>
                     </li>
                     <li>
-                        <a routerLink="/bootstrap/dropdowns" class="link-dark rounded"><i
-                                class="fas fa-bahai text-primary mt-1 me-2"></i>Dropdowns</a>
+                        <a routerLink="/objeto-window" class="link-dark rounded"><i
+                                class="fas fa-bahai text-primary mt-1 me-2"></i>Objeto window</a>
                     </li>
                     <li>
                         <a routerLink="/bootstrap/list-group" class="link-dark rounded"><i
