--- a/src/app/pages/objeto-window/objeto-window.component.html
+++ b/src/app/pages/objeto-window/objeto-window.component.html
@@ -1,51 +1,20 @@
-<button (click)="openNewWindow()">Open new Window</button><!-- abre una ventana nueva -->
-<button (click)="closeWindow()">Close Window</button><!-- cierra la ventana -->
-<button (click)="moveWindowTo()">Move to Window</button><!-- mueve la ventana-->
-<button (click)="resizeWindow()">Resize Window</button><!-- redimensiona la ventana-->
-<button (click)="printPage()">Print Page</button><!-- imprime la pagina-->
-<button (click)="resizeToWindow()">Resize To</button><!-- redimensiona la ventana-->
-<button (click)="alertWindow()">Alert</button><!-- muestra un mensaje-->
-<button (click)="confirmWindow()">Confirm</button><!-- muestra un mensaje-->
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 text-center mt-0 container-fluid "> <!-- Ajuste en el margen superior -->
+            <h1 class="display-6 mt-4">Objeto Window App</h1>
+            <p class="lead mb-1">En este proyecto pondremos en práctica unas cuantas funciones del objeto window, para comprender su funcionamiento.</p>
+            <!-- Cambio en la clase para reducir el tamaño de la letra -->
+        </div>
+    </div>
+</div>
+<div class="contenedor">
+<button class="btn btn-dark" (click)="openNewWindow()">Open new Window</button><!-- abre una ventana nueva -->
+<button class="btn btn-dark" (click)="closeWindow()">Close Window</button><!-- cierra la ventana -->
+<button class="btn btn-dark" (click)="moveWindowTo()">Move to Window</button><!-- mueve la ventana-->
+<button class="btn btn-dark" (click)="resizeWindow()">Resize Window</button><!-- redimensiona la ventana-->
+<button class="btn btn-dark" (click)="printPage()">Print Page</button><!-- imprime la pagina-->
+<button class="btn btn-dark" (click)="resizeToWindow()">Resize To</button><!-- redimensiona la ventana-->
+<button class="btn btn-dark" (click)="alertWindow()">Alert</button><!-- muestra un mensaje-->
+<button class="btn btn-dark" (click)="confirmWindow()">Confirm</button><!-- muestra un mensaje-->
 
-<p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat consequuntur sequi, quos exercitationem sint
-    cumque recusandae tempora aliquam. Commodi perspiciatis ratione minima? Dolorum in explicabo dolor eius a, rerum
-    nemo?
-    Voluptatum ab voluptates laudantium omnis reiciendis impedit ipsum sequi atque corrupti dolorum enim blanditiis
-    velit nam quod numquam non minima, facere beatae? Possimus inventore nesciunt rem exercitationem itaque
-    excepturi qui.
-    Nostrum sunt voluptatum doloremque suscipit eligendi consectetur nobis? Odio ullam iste aspernatur nemo hic
-    tenetur eligendi debitis, officiis totam porro corrupti quia ea dicta sequi vero, at, deleniti culpa qui.
-    Necessitatibus fuga tempore aut sapiente magni odit? Veniam provident officia esse, impedit fuga mollitia.
-    Possimus facilis corrupti nostrum cumque deleniti quasi, suscipit soluta pariatur distinctio inventore fuga
-    omnis ea id.
-    Accusantium, porro asperiores assumenda autem velit odio id? Quod alias, itaque sequi mollitia, pariatur maiores
-    consequuntur, beatae in impedit adipisci illo aliquam corrupti cupiditate est ad ratione totam eligendi porro?
-    Corrupti temporibus voluptatem sed nihil, perferendis aliquam sint fugiat, nesciunt laboriosam delectus
-    explicabo? Nulla culpa quis voluptatum consequatur distinctio illum maiores excepturi, exercitationem, modi
-    inventore deleniti, tempore ullam beatae sed!
-    Praesentium saepe nostrum, sit consequuntur unde esse ab porro dolorum consectetur, repellendus aut quo quisquam
-    fugit hic dicta odit! Distinctio odit est error cum ratione ut magni quibusdam in harum.
-    Nostrum eligendi, tempore adipisci ut harum alias rerum est aliquam sit deleniti, consequatur consectetur natus
-    delectus saepe quae recusandae fugiat. Optio, perspiciatis aut iste obcaecati quam minima quae. Et, reiciendis?
-    Consequatur modi molestiae commodi nemo assumenda perferendis distinctio fugit delectus, at aut voluptate iure
-    dolorem error ipsum? Voluptas qui aperiam nobis officiis itaque? Soluta impedit aliquam earum porro temporibus
-    laudantium.
-    Sequi beatae possimus eum natus quam nulla necessitatibus perspiciatis harum repellat pariatur at libero cum
-    tempore aliquid nostrum molestiae, nemo ipsa doloremque illum quis magni alias vitae nam? Non, dolorum.
-    Praesentium alias similique nam earum nobis qui soluta nemo. Earum vitae cumque eius rem ratione consectetur aut
-    neque ipsum vero laudantium, voluptatum perferendis totam voluptate, recusandae, distinctio itaque doloribus
-    laborum!
-    Voluptatum facilis sapiente tempore, ipsum veritatis accusantium temporibus repellendus aliquid! Quia cupiditate
-    eveniet quo recusandae distinctio vero corrupti maiores numquam asperiores, rem eum nemo atque aspernatur ipsum.
-    Illo, provident earum.
-    Minima eveniet quibusdam ab porro inventore voluptates amet, dicta natus vero laborum odio voluptate placeat
-    itaque error impedit laudantium debitis? Facilis eum hic doloribus aut minima! Earum natus aliquam error.
-    Illo doloribus id maiores iure dolorum eligendi doloremque voluptatibus necessitatibus sed nisi, tenetur cumque
-    quaerat adipisci, excepturi minima amet magnam quam voluptatem quia facere hic porro. Consequuntur nam a
-    doloribus.
-    Accusantium, nisi quam aliquam deserunt cupiditate fugit, nesciunt obcaecati, necessitatibus quo dolorem
-    repellendus? Rerum impedit laboriosam asperiores, non, veritatis fugit sint obcaecati iure nam alias sapiente
-    ratione unde. Ipsa, necessitatibus?
-</p>
-
+</div>
