--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -3,32 +3,32 @@
     grid-area: footer;
 }
 
-.nga-footer {
+.bg-dark {
     background-color: #212121;
     color: white;
 }
 
-.nga-footer {
+.bg-dark {
     width: 100%;
     height: 100%;
 }
 
-.nga-footer a {
+.bg-dark a {
     color: white;
     text-decoration: none
 }
 
-.nga-footer a:hover,
-.nga-footer a:focus {
+.bg-dark a:hover,
+.bg-dark a:focus {
     color: white;
     text-decoration: underline;
 }
 
-.nga-footer .nga-hint {
+.bg-dark .nga-hint {
     background-color: #1976d2;
 }
 
-.nga-footer .nga-hint:hover {
+.bg-dark .nga-hint:hover {
     opacity: 0.8;
 }
 
@@ -52,7 +52,8 @@
 
 .nga-btn-social i {
     font-size: 1.25rem;
-    line-height: 47px
+    line-height: 47px;
+    transition: 1s;
 }
 
 .nga-btn-social i {
@@ -60,15 +61,6 @@
     width: inherit;
     color: white;
     text-align: center
-}
-
-.nga-btn-social:hover {
-    -webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
-}
-
-.nga-btn-social i:hover {
-    color: black;
 }
 
 .nga-btn-github {
@@ -85,4 +77,15 @@
 
 .nga-btn-twitter {
     background-color: #55acee;
+}
+
+i {
+    width: 30px;
+    transition: 1s;
+
+}
+
+i:hover{
+    scale: 1.6;
+    rotate: calc(360deg);
 }
