--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,27 +1,30 @@
-<footer class="nga-footer mt-auto">
-
-    <div class="container py-5 text-center text-lg-start">
+<footer class="bg-dark text-white text-center py-4">
+    <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-5 mb-3">
-                <h2 class="h5"><img class="mb-1 me-1" src="./assets/kali-linux-logo.png" width="25" height="25"
-                        alt="Logo Ganatan">CALIS7</h2>
-                <hr class="text-white mb-4 mt-0 d-inline-block " style="width: 120px;">
-                <p>Web Application : Angular 17, Bootstrap 5 </p>
-                <p>Routing, Lazy Loading, SSR, PWA, SEO </p>
-                <div>
-                    <a type="button" class="nga-btn-social nga-btn-linkedin" href="#" aria-label="Linkedin ganatan">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    <a type="button" class="nga-btn-social nga-btn-twitter" href="#" aria-label="Twitter ganatan">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a type="button" class="nga-btn-social nga-btn-github" href="#" aria-label="Github ganatan">
-                        <i class="fab fa-github"></i></a>
-                    <a type="button" class="nga-btn-social nga-btn-gitlab" href="#" aria-label="Gitlab ganatan">
-                        <i class="fab fa-gitlab"></i></a>
-                </div>
+            <div class="col">
+                <a type="button" class="nga-btn-social nga-btn-github" href="https://angular.io/"
+                    aria-label="Angular ganatan">
+                    <i class="fab fa-angular"></i>
+                </a>
+
             </div>
-            <div class="col-6 col-lg-3 mb-3">
+
+            <div class="col">
+                <a type="button" class="nga-btn-social nga-btn-linkedin"
+                    href="https://www.linkedin.com/in/santiagoojedafreire?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BO2EbSvGWQZittR1VxGsuxw%3D%3D"
+                    aria-label="Linkedin ganatan">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+            </div>
+            
+            <div class="col">
+                <a type="button" class="nga-btn-social nga-btn-github" href="https://github.com/adejoogaitnas/PROYECTO-FINAL"
+                    aria-label="Github ganatan">
+                    <i class="fab fa-github"></i></a>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col">
                 <h2 class="h5">Tools</h2>
                 <hr class="text-white mt-0 d-inline-block" style="width: 70px;">
                 <ul class="list-unstyled">
@@ -30,16 +33,24 @@
                     <li class="mb-2"><a href="https://fontawesome.com/">Font Awesome</a></li>
                 </ul>
             </div>
-            <div class="col-6 col-lg-3 mb-3">
+            <div class="col">
                 <h2 class="h5">Learn</h2>
                 <hr class="text-white mt-0 d-inline-block" style="width: 70px;">
                 <ul class="list-unstyled">
-                    <li class="mb-2"><a href="#">Tutorials</a></li>
-                    <li class="mb-2"><a href="#">About</a></li>
+                    <li class="mb-2"><a href="https://www.youtube.com/watch?v=f7unUpshmpA&ab_channel=midulive">Tutorials</a></li>
+                    <li class="mb-2"><a href="https://angular.io/guide/what-is-angular">About</a></li>
                 </ul>
             </div>
+           
+        </div>
+
+
+        <div class="row mt-5">
+            <div class="col">
+                <p>2024 &copy; Todos los derechos reservados</p>
+            </div>
+
         </div>
     </div>
-
 </footer>
 
