--- a/src/app/pages/clima/clima.component.css
+++ b/src/app/pages/clima/clima.component.css
@@ -1,29 +1,43 @@
-.contenedor {
-    max-width: 500px;
-    margin: 0 auto;
-    padding: 20px;
+:host {
+    display: block;
     text-align: center;
-    background-color: #a0d3ff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.contenedor {
+    max-width: 30em;
+    margin: 2em auto;
+    padding: 1.2em;
+    border-radius: 8px;
+    text-align: center;
+    background-color: lightgray;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 h1 {
-    color: #333333;
+    color: #333;
 }
 
 input[type="text"] {
+    margin-top: 2em;
+    margin-bottom: 2em;
     padding: 10px;
     font-size: 16px;
     width: 70%;
+    border-radius: 4px;
 }
 
 button {
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #007bff;
+    background-color: black;
     color: #ffffff;
     border: none;
     cursor: pointer;
+    border-radius: 4px;
+    transition:0.5s;
+}
+button:hover {
+    scale: 1.2;
 }
 
 #datosClima {
