--- a/src/app/pages/github/github.component.css
+++ b/src/app/pages/github/github.component.css
@@ -1,10 +1,43 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
+:host {
+    display: block;
+    text-align: center;
 }
 
-#result {
-    border: 1px solid #ccc;
-    padding: 20px;
+.contenedor {
+    max-width: 32em;
+    margin: 1em auto;
+    padding: 1.2em;
+    border-radius: 8px;
+    text-align: center;
+    background-color: lightgray;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
+
+h1 {
+    color: #333;
+}
+
+input[type="text"] {
+    padding: 10px;
+    font-size: 16px;
+    width: 70%;
+    border-radius: 4px;
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: black;
+    color: #ffffff;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    transition:0.5s;
+}
+button:hover {
+    scale: 1.2;
+}
+textarea{
+    border-radius: 4px;
+}
+
