--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3 text-center mt-0 container-fluid "> <!-- Ajuste en el margen superior -->
-            <h1 class="display-4 mt-5">¡Bienvenido a nuestra App de Enseñanza!</h1>
-            <p class="lead mb-4 small">Aquí aprenderás sobre Angular, Bootstrap y FontAwesome de manera fácil y
+            <h1 class="display-6 mt-4">¡Bienvenido a nuestra App!</h1>
+            <p class="lead mb-1">Aquí aprenderás sobre Angular, Bootstrap y FontAwesome de manera fácil y
                 divertida.</p> <!-- Cambio en la clase para reducir el tamaño de la letra -->
-            <p class="mb-4">Navega a través del menú lateral izquierdo para explorar todas las aplicaciones disponibles.
+            <p class="mb-3">Navega a través del menú lateral izquierdo para explorar todas las aplicaciones disponibles.
                 Puedes probar aplicaciones que utilizan APIs o reciclan componentes de otros proyectos.</p>
             <!-- Nueva información adicional -->
             <img src="https://angular.io/assets/images/logos/angular/angular.svg" alt="Angular Logo" width="100">
@@ -13,7 +13,7 @@
             <i class="fab fa-font-awesome-flag fa-3x mt-3"></i>
             <div class="visit-counter mt-4">
                 <p>¡Has visitado esta página {{ visitCount }} veces!</p>
-                <button (click)="incrementVisitCount()" class="btn btn-primary">Aumenta</button>
+                <button (click)="incrementVisitCount()" class="btn btn-dark">Aumenta</button>
             </div>
         </div>
     </div>
