--- a/src/app/pages/peliculas/peliculas.component.css
+++ b/src/app/pages/peliculas/peliculas.component.css
@@ -1,52 +1,68 @@
-.container {
-    max-width: 500px;
-    margin: 0 auto;
+.contenedor {
+    max-width: 30em;
+    margin: 2em auto;
+    padding: 1.2em;
+    border-radius: 8px;
     text-align: center;
+    background-color: lightgray;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
-
-h1 {
+  
+  h1 {
     color: #333;
-}
-
-input[type="text"] {
+  }
+  
+  input[type="text"] {
+    margin-top: 2em;
     width: 300px;
     padding: 10px;
     font-size: 16px;
-}
-
-button {
+    border-radius: 4px;
+  }
+  
+  button {
     padding: 10px 20px;
     font-size: 16px;
     background-color: #333;
     color: #fff;
     border: none;
     cursor: pointer;
-}
-
-#results {
+    border-radius: 4px;
+    transition: 0.5s;
+  }
+  button:hover {
+    scale: 1.2;
+  }
+  
+  #results {
     margin-top: 20px;
     text-align: left;
-}
-
-.movie {
-    min-height: 200px;
+  }
+  .resultado {
+    margin-top: 2em;
+  }
+  .movie {
+    min-height: 180px;
     margin-bottom: 10px;
     padding: 10px;
     background-color: #f5f5f5;
     border-radius: 5px;
-}
-
-.movie img {
+  }
+  
+  .movie img {
     width: 100px;
     float: left;
     margin-right: 10px;
-}
-
-.movie h2 {
+  }
+  
+  .movie h2 {
     font-size: 18px;
     margin-top: 0;
-}
-
-.movie p {
+    
+  }
+  
+  .movie p {
     margin: 5px 0;
-}
+    
+  }
+  
