--- a/src/app/pages/peliculas/peliculas.component.html
+++ b/src/app/pages/peliculas/peliculas.component.html
@@ -1,14 +1,26 @@
-<div class="container text-white">
-    <h1 class="text-white">Buscador de películas</h1>
-    <input type="text" [(ngModel)]="searchInput" placeholder="Ingrese el título de la película">
-    <button (click)="searchMovies()">Buscar</button>
-    @if (movies.length === 0) {
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3 text-center mt-0 container-fluid "> <!-- Ajuste en el margen superior -->
+            <h1 class="display-6 mt-4">Films App</h1>
+            <p class="lead mb-1">Ingresa el nombre de tu película favorita, y te proporcionaremos la fecha de lanzamiento y un pequeña sinopxis.</p>
+            <!-- Cambio en la clase para reducir el tamaño de la letra -->
+        </div>
+    </div>
+</div>
+<div class="contenedor">
+    <input type="text" [(ngModel)]="searchInput" placeholder="Ingrese el título de la película" #required>
+    <br>
+    <br>
+    <button class="btn btn-dark" (click)="searchMovies()">Buscar</button>
+    @if (!searchInput) {
     <div>
-        <p>No se encontraron resultados para tu búsqueda.</p>
+        <br>
+        <p>No has ingresado ninguna película.</p>
     </div>
     }
+    
     @if (movies.length > 0) {
-    <div>
+    <div class="resultado">
         @for (movie of movies; track movie) {
         <div class="movie">
             <img [src]="movie.posterPath" alt="Poster">
@@ -19,5 +31,8 @@
         }
     </div>
     }
-</div>
+    
+   
+    
+
 
