--- a/src/app/pages/validacion/validacion.component.css
+++ b/src/app/pages/validacion/validacion.component.css
@@ -1,14 +1,27 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+:host {
+    display: block;
+    text-align: center;
+}
+
+.contenedor {
+    max-width: 30em;
+    margin: 2em auto;
+    padding: 1.2em;
+    border-radius: 8px;
+    text-align: center;
+    background-color: lightgray;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+
+h1 {
+    color: #333;
+
 }
 
 #formulario {
-    width: 350px;
     padding: 20px;
-    background-color: #f2f2f2;
+    background-color: lightgray;
     border-radius: 5px;
 }
 
@@ -24,22 +37,26 @@ label {
 input[type="text"],
 input[type="email"],
 input[type="password"] {
-    padding: 5px;
-    border-radius: 5px;
+    width: 80%;
+    padding: 10px;
+    border-radius: 4px;
     border: 1px solid #ccc;
 }
-
-button[type="submit"] {
+button {
     padding: 10px 20px;
-    background-color: #4CAF50;
-    color: #fff;
+    font-size: 16px;
+    background-color: black;
+    color: #ffffff;
     border: none;
-    border-radius: 5px;
     cursor: pointer;
+    border-radius: 4px;
+    transition:0.5s;
 }
-
 .error-message {
     color: red;
     font-size: 12px;
     margin-top: 5px;
+}
+button:hover {
+   scale:1.2;
 }
