--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -38,7 +38,8 @@
                         Server proyect
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" routerLink="/objeto-window">Action</a></li>
+                        <li><a class="dropdown-item" routerLink="/tutorials">Notas</a></li>
+                        <li><a class="dropdown-item" routerLink="/add-tutorial">Añadir nota</a></li>
                     </ul>
                 </li>
                 
