--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -61,8 +61,12 @@
             <div class="collapse" id="account-collapse">
                 <ul class="nga-btn-toggle-nav list-unstyled fw-normal pb-1 small">
                     <li>
-                        <a routerLink="/bootstrap/accordions" class="link-dark rounded">
-                            <i class="far fa-address-card text-primary mt-1 me-2"></i>Accordions</a>
+                        <a routerLink="/tutorials" class="link-dark rounded">
+                            <i class="fa-solid fa-clipboard text-primary mt-1 me-2"></i>Notas</a>
+                    </li>
+                    <li>
+                        <a routerLink="/add-tutorial" class="link-dark rounded">
+                            <i class="fa-solid fa-clipboard text-primary mt-1 me-2"></i>Añadir notas</a>
                     </li>
                 </ul>
             </div>
