EDICION FINAL DEL PROYECTO Y EXPLICACIÓN DEL PROYECTO  EN README.MD

--- a/src/app/pages/add-tutorial/add-tutorial.component.html
+++ b/src/app/pages/add-tutorial/add-tutorial.component.html
@@ -37,8 +37,8 @@
 
         @if (submitted) {
           <div>
-            <h4>Tutorial was submitted successfully!</h4>
-            <button class="btn btn-success" (click)="newTutorial()">Add</button>
+            <h4>Nota añadida</h4>
+            <button class="btn btn-dark" (click)="newTutorial()">Añadir</button>
           </div>
         }
       </div>
