--- a/src/app/pages/tutorials-list/tutorials-list.component.html
+++ b/src/app/pages/tutorials-list/tutorials-list.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-6 offset-md-3 text-center mt-0 container-fluid "> <!-- Ajuste en el margen superior -->
       <h1 class="display-6 mt-4">Notas</h1>
-      <p class="lead mb-1">Es este apartado puedes buscar las notas acceder a ellas o eliminarlas.</p>
+      <p class="lead mb-1">Es este apartado puedes buscar las notas acceder a ellas, publicarlas, retirarlas, eliminarlas de manera individual, actualizarlas, o eliminarlas todas a la vez.</p>
       <!-- Cambio en la clase para reducir el tamaño de la letra -->
     </div>
   </div>
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div>
-      <h4>Tutorials List</h4>
+      <h4>Notas almacenadas</h4>
       <ul class="list-group">
         @for (tutorial of tutorials; track tutorial; let i = $index) {
           <li
@@ -48,7 +48,7 @@
       </ul>
 
       <button class="m-3 btn btn-sm btn-dark" (click)="removeAllTutorials()">
-        Remove All
+        Eliminar todas
       </button>
     </div>
     <div>
